--- a/index.html
+++ b/index.html
@@ -3,139 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hossain Shamil | Portfolio</title>
+  <title>Md Harun | Portfolio</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-      line-height: 1.6;
-    }
-    header {
-      background: #020617;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    header p {
-      font-size: 1.1rem;
-      color: #94a3b8;
-    }
-    nav {
-      background: #020617;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding-bottom: 20px;
-    }
-    nav a {
-      color: #e5e7eb;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      max-width: 1000px;
-      margin: auto;
-      padding: 60px 20px;
-    }
-    h2 {
-      border-bottom: 2px solid #38bdf8;
-      display: inline-block;
-      padding-bottom: 5px;
-      margin-bottom: 20px;
-    }
-    .skills, .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .card {
-      background: #020617;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    footer {
-      text-align: center;
-      padding: 30px;
-      background: #020617;
-      color: #94a3b8;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; background: #f4f6f8; color: #333; }
+    header { background: #0f172a; color: white; padding: 40px 20px; text-align: center; }
+    section { padding: 40px 20px; max-width: 900px; margin: auto; }
+    h2 { color: #0f172a; }
+    .skills span { display: inline-block; background: #e2e8f0; padding: 8px 12px; margin: 6px; border-radius: 6px; }
+    .project { background: white; padding: 20px; margin: 15px 0; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    footer { text-align: center; padding: 20px; background: #0f172a; color: white; }
+    a { color: #2563eb; text-decoration: none; }
   </style>
 </head>
 <body>
-
   <header>
-    <h1>Hossain Shamil</h1>
-    <p>Software Engineering Student | Web Developer | Tech Enthusiast</p>
+    <h1>Md Harun</h1>
+    <p>B.Sc in Software Engineering | Aspiring Developer</p>
   </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#education">Education</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
+  <section>
     <h2>About Me</h2>
-    <p>
-      I am a Software Engineering student at Daffodil International University, Dhaka. I have been passionate about technology since childhood and enjoy building practical web-based solutions. My interests include web development, machine learning, and research in mental health analysis using social media data.
-    </p>
+    <p>I am a final-year B.Sc Software Engineering student with a strong interest in web development and software solutions. I am continuously learning modern technologies and building real-world projects.</p>
   </section>
 
-  <section id="skills">
+  <section>
     <h2>Skills</h2>
     <div class="skills">
-      <div class="card">HTML, CSS, JavaScript</div>
-      <div class="card">Python, Java</div>
-      <div class="card">React (Basic)</div>
-      <div class="card">Machine Learning (NLP Basics)</div>
-      <div class="card">Git & GitHub</div>
-      <div class="card">Problem Solving</div>
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>JavaScript</span>
+      <span>Python</span>
+      <span>WordPress</span>
+      <span>Basic Git</span>
     </div>
   </section>
 
-  <section id="projects">
+  <section>
     <h2>Projects</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>Mental Health Prediction System</h3>
-        <p>Predictive analysis of mental health risks using social media data and machine learning models.</p>
-      </div>
-      <div class="card">
-        <h3>University Social Platform (Concept)</h3>
-        <p>A social media platform designed exclusively for university students to share academic and social content.</p>
-      </div>
-      <div class="card">
-        <h3>Personal Portfolio Website</h3>
-        <p>A responsive personal portfolio website to showcase skills and projects.</p>
-      </div>
+    <div class="project">
+      <h3>Personal Portfolio Website</h3>
+      <p>A responsive personal portfolio website created using HTML and CSS.</p>
+    </div>
+    <div class="project">
+      <h3>Student Management System</h3>
+      <p>A simple academic project for managing student records.</p>
     </div>
   </section>
 
-  <section id="education">
-    <h2>Education</h2>
-    <p>
-      <strong>BSc in Software Engineering</strong><br />
-      Daffodil International University<br />
-      Ongoing
-    </p>
-  </section>
-
-  <section id="contact">
+  <section>
     <h2>Contact</h2>
-    <p>Email: yourname@email.com</p>
-    <p>GitHub: github.com/yourusername</p>
+    <p>Email: rashid35-1038@diu.edu.bd</p>
+    <p>GitHub: <a href="#">https://github.com/harun436</a></p>
   </section>
 
   <footer>
-    <p>© 2025 Hossain Shamil. All rights reserved.</p>
+    <p>© 2025 Md Harun. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
