--- a/index.html
+++ b/index.html
@@ -3,61 +3,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Md Harun | Portfolio</title>
+  <title>Md Harun | Software Engineer Portfolio</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f4f6f8; color: #333; }
-    header { background: #0f172a; color: white; padding: 40px 20px; text-align: center; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; background: #f4f6f8; color: #333; line-height: 1.6; }
+    header { background: #0f172a; color: white; padding: 40px 20px; text-align: center; border-bottom: 5px solid #2563eb; }
+    header h1 { margin-bottom: 5px; font-size: 2.5em; }
+    header p { margin-top: 0; font-size: 1.2em; }
     section { padding: 40px 20px; max-width: 900px; margin: auto; }
-    h2 { color: #0f172a; }
-    .skills span { display: inline-block; background: #e2e8f0; padding: 8px 12px; margin: 6px; border-radius: 6px; }
-    .project { background: white; padding: 20px; margin: 15px 0; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-    footer { text-align: center; padding: 20px; background: #0f172a; color: white; }
-    a { color: #2563eb; text-decoration: none; }
+    h2 { color: #0f172a; border-bottom: 2px solid #e2e8f0; padding-bottom: 10px; margin-top: 0; }
+    .skills-list { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 15px; }
+    .skills-list span { display: inline-block; background: #2563eb; color: white; padding: 8px 15px; border-radius: 20px; font-size: 0.9em; font-weight: bold; }
+    .soft-skills ul { list-style: none; padding: 0; display: flex; flex-wrap: wrap; gap: 20px; }
+    .soft-skills li { background: #ffffff; padding: 15px; border-left: 4px solid #0f172a; border-radius: 4px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); width: calc(50% - 30px); /* Adjust for smaller screens */ }
+    .project, .achievement { background: white; padding: 25px; margin: 20px 0; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0:0,0.05); transition: transform 0.2s; }
+    .project:hover, .achievement:hover { transform: translateY(-3px); }
+    .achievement h3 { color: #2563eb; margin-top: 0; }
+    .contact-info a { color: #2563eb; text-decoration: none; font-weight: bold; }
+    footer { text-align: center; padding: 20px; background: #0f172a; color: #a0aec0; font-size: 0.9em; }
+
+    /* Responsive adjustments for soft skills */
+    @media (max-width: 768px) {
+        .soft-skills li { width: 100%; margin-bottom: 10px; }
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Md Harun</h1>
-    <p>B.Sc in Software Engineering | Aspiring Developer</p>
+    <h1>MD HARUN</h1>
+    <p>Software Engineering Graduate | Front-End & Solutions Developer</p>
   </header>
 
   <section>
-    <h2>About Me</h2>
-    <p>I am a final-year B.Sc Software Engineering student with a strong interest in web development and software solutions. I am continuously learning modern technologies and building real-world projects.</p>
+    <h2>🚀 Professional Summary</h2>
+    <p>A highly motivated final-year B.Sc Software Engineering student with a passion for **creating intuitive and maintainable web applications**. I possess a solid foundation in software development life cycles (SDLC) and object-oriented programming (OOP). My primary focus is on **Front-End Development**, driven by a commitment to user experience and technical excellence. I am actively seeking a role where I can leverage my academic background, fundamental hard skills, and collaborative soft skills to deliver business value and continuously grow as a professional developer.</p>
   </section>
 
   <section>
-    <h2>Skills</h2>
-    <div class="skills">
-      <span>HTML</span>
-      <span>CSS</span>
-      <span>JavaScript</span>
+    <h2>⚙️ Technical Competencies (Hard Skills)</h2>
+    
+    <h3>Programming Languages & Databases</h3>
+    <div class="skills-list">
+      <span>JavaScript (ES6+)</span>
+      <span>HTML5/CSS3</span>
       <span>Python</span>
-      <span>WordPress</span>
-      <span>Basic Git</span>
+      <span>SQL (Basic)</span>
     </div>
+
+    <h3>Front-End & UI/UX</h3>
+    <div class="skills-list">
+      <span>Responsive Design</span>
+      <span>Bootstrap Framework</span>
+      <span>Basic React.js (Learning)</span>
+      <span>CSS Preprocessors (Basic)</span>
+    </div>
+
+    <h3>Tools & Version Control</h3>
+    <div class="skills-list">
+      <span>Git & GitHub</span>
+      <span>VS Code</span>
+      <span>Basic Linux CLI</span>
+      <span>Jira/Trello (Familiarity)</span>
+    </div>
+
+  </section>
+
+  <section class="soft-skills">
+    <h2>🤝 Essential Soft Skills</h2>
+    <ul>
+      <li>
+        <strong>Problem-Solving:</strong> Proven ability to analyze complex technical challenges, decompose them into manageable tasks, and rapidly prototype solutions.
+      </li>
+      <li>
+        <strong>Adaptability:</strong> Quickly grasps new frameworks and technologies, demonstrated by self-learning new coding practices outside the curriculum.
+      </li>
+      <li>
+        <strong>Team Collaboration:</strong> Experience working in academic group projects using Agile/Scrum principles to ensure timely delivery and clear communication.
+      </li>
+      <li>
+        <strong>Attention to Detail:</strong> Highly focused on writing clean, well-documented, and efficient code to maintain high project quality standards.
+      </li>
+    </ul>
+  </section>
+  
+  <section>
+    <h2>✨ Experience & Achievements</h2>
+    
+    <div class="achievement">
+      <h3>Academic Excellence Award</h3>
+      <p>Achieved a **3.8/4.0 GPA** in core computer science modules, demonstrating strong analytical and technical comprehension.</p>
+    </div>
+
+    <div class="achievement">
+      <h3>Successful Deployment of Test Project</h3>
+      <p>Independently designed and deployed a **Python-based data parsing script** that reduced manual data entry time for a simulated task by approximately **40%**.</p>
+    </div>
+
+    <div class="achievement">
+      <h3>Certified in Agile Methodology</h3>
+      <p>Completed an introductory course on **Agile and Scrum** frameworks, emphasizing collaborative teamwork and iterative development cycles.</p>
+    </div>
+
   </section>
 
   <section>
-    <h2>Projects</h2>
+    <h2>💻 Key Projects</h2>
     <div class="project">
-      <h3>Personal Portfolio Website</h3>
-      <p>A responsive personal portfolio website created using HTML and CSS.</p>
+      <h3>Interactive Portfolio Site (HTML/CSS/JS)</h3>
+      <p>Developed a fully **responsive and interactive personal portfolio** from scratch, focusing on modern UI/UX principles and optimized loading times.</p>
     </div>
     <div class="project">
-      <h3>Student Management System</h3>
-      <p>A simple academic project for managing student records.</p>
+      <h3>Local Academic Management System (Python/SQL)</h3>
+      <p>Engineered a robust academic project utilizing Python for back-end logic and basic SQL for data persistence, capable of managing up to **500 student records** and generating automated reports.</p>
     </div>
   </section>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: rashid35-1038@diu.edu.bd</p>
-    <p>GitHub: <a href="#">https://github.com/harun436</a></p>
+  <section class="contact-info">
+    <h2>📞 Contact Information</h2>
+    <p>Email: <a href="mailto:rashid35-1038@diu.edu.bd">rashid35-1038@diu.edu.bd</a></p>
+    <p>GitHub: <a href="https://github.com/harun436" target="_blank">github.com/harun436</a></p>
   </section>
 
   <footer>
-    <p>© 2025 Md Harun. All rights reserved.</p>
+    <p>MD HARUN | Software Engineer Portfolio | © 2025</p>
   </footer>
 </body>
 </html>
